--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <nav>
 <ul>
 		<li class = "nav-Home"> 
-		<a href= "home.html"> Home </a>
+		<a href= "index.html"> Home </a>
 		</li>
 		<li class = "nav-Smart"> 
 		<a href= "Start.html"> Start </a>
