--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<a href= "Technology.html"> Technology </a>
 		</li>
 		<li class = "nav-Project"> 
-		<a href= "Project.html"> Project </a>
+		<a href= "project.html"> Project </a>
 		</li>
 		
 	</ul>
